[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
dotenv = "0.15.0"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "eclipse-bot"
path = "src/main.rs"
